@@ -1,57 +1,37 @@
 pipeline {
-    agent any
-
-    tools {
-        maven 'maven'
-    }
-
-    environment {
-        MAVEN_OPTS = '--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED'
-        DOCKER_IMAGE_NAME = 'hala'
-        DOCKER_IMAGE_TAG = "${env.GIT_COMMIT}"
-    }
-
-    stages {
-        stage('Build Artifact') {
+  agent any
+  tools {
+        maven 'maven' // Specify the version of Maven you want to use
+  }
+  environment {
+        DOCKER_HUB_CREDENTIALS = credentials('docker_hub_repo')
+        IMAGE_NAME = "haladhaouadi/my-repo"
+        IMAGE_TAG = "devsecops-${env.BUILD_NUMBER}"  // Utilisation du numéro de build Jenkins comme version
+  }
+  stages {
+      stage('Build Artifact') {
             steps {
-                sh "mvn clean package -DskipTests=true"
-                archiveArtifacts artifacts: 'target/*.jar'
+              sh "mvn clean package -DskipTests=true"
+              archive 'target/*.jar' //so that they can be downloaded later
             }
-        }
+        } 
 
-        stage('Unit Test') {
-            steps {
-                sh "mvn test"
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-
-        stage('Code Coverage') {
-            steps {
-                jacoco execPattern: '**/target/jacoco.exec',
-                       classPattern: '**/target/classes',
-                       sourcePattern: '**/src/main/java'
-            }
-        }
-
-        stage('Docker Build and Push') {
+      stage('Build Variable Image') {
             steps {
                 script {
-                    sh 'docker --version'
-                    sh "docker build -t ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG} ."
-                    sh "docker push ${DOCKER_IMAGE_NAME}:${DOCKER_IMAGE_TAG}"
+                    sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} ."
                 }
             }
         }
-    }
-
-    post {
-        always {
-            cleanWs()
+      stage('Push Images to Docker Hub') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'docker_hub_repo', passwordVariable: 'DOCKER_HUB_PASSWORD', usernameVariable: 'DOCKER_HUB_USERNAME')]) {
+                        sh "echo $DOCKER_HUB_PASSWORD | docker login -u $DOCKER_HUB_USERNAME --password-stdin"
+                        sh "docker push ${IMAGE_NAME}:${IMAGE_TAG}"
+                    }
+                }
+            }
         }
     }
 }
